<resources>
    <string name="app_name">UnmannedStorageDisplay</string>
    <string name="warehouse_no">仓库编号</string>
    <string name="user_name">用户名称</string>
    <string name="unit_no">用户名称</string>
    <string name="warning">告警类型</string>
    <string name="material_no">物料编号</string>
    <string name="material_name">物料名称</string>
    <string name="warning_content">告警内容</string>
    <string name="welcome">欢迎使用无人仓储系统</string>
    <string name="welcome_splash">欢迎使用</string>

    <string name="welcome_new">欢迎使用无人值守仓储管理系统</string>
    <string name="user_name_new">姓名</string>
    <string name="user_no">工号</string>
    <string name="order_no">订单号</string>
    <string name="warn">告警</string>
    <string name="unconnect">失联</string>
    <string name="normal">正常</string>
    <string name="run">运行</string>
    <string name="connect">连接</string>
</resources>
